# dev.dtxChartter.v3

./: .gitignore  package.json  pyproject.toml
Code/V1/: magic.ipynb
Code/V2/: magic.ipynb
Code/V3/: backtest_summary.csv  daily_summary.csv  magic.ipynb  summary.csv  tafm.py
Code/V4/: ChartterX5.py  account_summary.csv  bktst.py  magic.ipynb  resampler.py  trades_journal.csv
Code/V5/: account_summary.csv  bktst-1.py  daily_summary.csv  magic.ipynb  trades_journal.csv  tst-bktst.ipynb
Code/V5-A/: lear-bktrader.py  magic.ipynb  trades_journal.csv
Code/V5-A/bktst/: bktst.py
Code/V5-b/: Notes-v5.md  bktst.py  magic.ipynb
Code/V5-b/tst/: tsts.py
Code/V6/: account_summary.csv  magic.ipynb
Code/V7/: bktst.py  magic.ipynb  signaltbl.parquet  tst-bktst.ipynb
MLs/RV6-A/: eda.ipynb  trades_journal.csv
SYS/: auto-commit.mjs  resample.mjs
