[project]
name = "chartter-v3"
version = "0.1.0"
description = "trying to simplyfy things"
authors = [{ name = "Avijit Sarkar", email = "avisofficeone@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
package-mode = false 
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=1.24,<2.3)",
    "scipy (>=1.16.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "ta-lib (>=0.6.7,<0.7.0)",
    "stock-indicators (>=1.3.5,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
